--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ version '0.2.0'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.8
 
@@ -46,3 +47,23 @@ kotlinter {
     continuationIndentSize = 4
 }
 compileKotlin.dependsOn lintKotlin
+
+publishing {
+    publications {
+        java(MavenPublication) {
+            from project.components.java
+            groupId = 'ch.ergon.mws'
+            artifactId = 'rxpect'
+            version = "$version-${rootProject.hasProperty('techVersion') ? rootProject.getProperty('techVersion') : 'devel'}"
+        }
+    }
+    repositories {
+        maven {
+            credentials {
+                username 'deployment'
+                password rootProject.getProperty('publishPassword')
+            }
+            url 'http://coop-mws-nexus.ergon.ch/repository/releases/'
+        }
+    }
+}
